--- a/.dotfiles/tmux/.tmux.conf
+++ b/.dotfiles/tmux/.tmux.conf
@@ -1,4 +1,8 @@
 
+set-option -sg escape-time 10
+set-option -g default-terminal "screen-256color"
+set-option -g focus-events on
+
 set -g status-style 'bg=#223344 fg=#5eacd3'
 
 bind r source-file ~/.tmux.conf
